# NativeAES

./: CMakeLists.txt  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rahulpwar654/ndktestapp/: MainActivity.java
app/src/main/res/drawable/: ic_arrow_downward_black.xml
app/src/main/res/layout/: activity_main.xml  activity_native_call.xml
encryptor/: CMakeLists.txt  build.gradle
encryptor/src/main/: AndroidManifest.xml
encryptor/src/main/cpp/: anti_debugger.cpp.txt  encryption.cpp
encryptor/src/main/java/com/rahulpwar654/encryptor/: AESEncryptor.java
gradle/wrapper/: gradle-wrapper.properties
